# CommonToolMcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  example.py  install.py  pyproject.toml  requirements-dev.txt  requirements.txt
common_tool_mcp_server/: __init__.py  main.py  server.py  system_client.py  types.py
tests/: __init__.py  test_system_client.py
